# FreeFlight-Atmospheric-FX

./: .gitignore  BUILD_WINDOWS.txt  CMakeLists.txt  INSTALL_TEST.txt  README.md  STANDALONE_TEST.txt  UI_HOST_INTEGRATION.md  V03_WAKE_LIFECYCLE.txt  VALIDATION.txt  XUIPC_INTEGRATION.md  companion_build.txt
.github/workflows/: engine-v1-contrail-debug.yml  engine-v1-geometry-debug.yml  engine-v1-recorder.yml  engine-v1-replay-runner.yml  release.yml
app/: FFAtmoAssets.rc  FFAtmoCompanion.manifest  FFAtmoCompanion.rc  FFAtmoResource.h  GithubAuth.cpp  GithubAuth.h  ImGuiCompanion.cpp  SkinRenderer.cpp  SkinRenderer.h  TelemetryProvider.cpp  TelemetryProvider.h  UpdateService.cpp  UpdateService.h  UpdaterMain.cpp  main.cpp
app/ui/assets/: asset_manifest.json
assets/: FFAtmo_particles.pss
docs/: ACF_GEOMETRY_PIPELINE.md  ACF_PARSER_SUBSYSTEM_SPEC.md  ARCHITECTURE_OVERVIEW.md  CONTRAIL_RENDERER_V4_IMPLEMENTATION_PLAN.md  CONTRAIL_SIMULATION_V1.md  CORE_DATA_CONTRACTS.md  DATAREF_CATALOGUE.md  DATAREF_SOURCE_INVENTORY.md  DEVELOPMENT_ROADMAP.md  ENGINE_V1_CHARTER.md  GEOMETRY_DEBUG_BUILD_TRIGGER.md  GEOMETRY_DEBUG_PR_TRIGGER.md  GEOMETRY_DEBUG_PR_TRIGGER_2.md  GEOMETRY_DEBUG_PR_TRIGGER_3.md  OFFLINE_REPLAY_RUNNER.md  OVERLAY_V2_BUILD_NOTES.md  OVERLAY_V2_VALIDATION_TRIGGER.md  PERFORMANCE_BUDGETS.md  README.md  REPLAY_SYSTEM_SPEC.md  SNAPSHOT_RECORDER_IMPLEMENTATION_SPEC.md  SNAPSHOT_RECORDER_TEST_PLAN.md  THREADING_MODEL.md  UPDATER.md  contrail-vortex-capture-v014.md
docs/adr/: ADR-001-authoritative-process.md  ADR-002-simulation-representation.md  ADR-003-renderer-independence.md  ADR-004-thread-ownership.md  ADR-005-weather-authority.md  ADR-006-platform-strategy.md  ADR-007-version-one-scope.md  ADR-008-acf-geometry-authority.md  README.md
docs/fixtures/: 737_80NG_ACF_ANALYSIS.md
docs/validation/: .world_renderer_pending  B738_ACF_GEOMETRY_VALIDATION.md  B738_CANONICAL_REPLAY_20260722.md  B738_CONTRAIL_BASELINE_V1_VALIDATION.md  B738_OFFLINE_REPLAY_RUNNER_VALIDATION.md  B738_SNAPSHOT_RECORDER_SMOKE_TEST.md  LIVE_CONTRAIL_VISUAL_DEBUG_V1.md  LIVE_CONTRAIL_VISUAL_DEBUG_V1_LOG.md  LIVE_CONTRAIL_VISUAL_DEBUG_V1_NOTE.txt  OFFLINE_REPLAY_RUNNER_BUILD_TRIGGER.md  OFFLINE_REPLAY_RUNNER_CI.md  OFFLINE_REPLAY_RUNNER_IMPLEMENTATION.md  OFFLINE_REPLAY_RUNNER_NOTE.txt  WORLD_RENDERER_CI_TRIGGER.md  WORLD_RENDERER_CI_TRIGGER_2.md  WORLD_RENDERER_CI_TRIGGER_3.md  WORLD_RENDERER_CI_TRIGGER_4.md  WORLD_RENDERER_V2_PR_TRIGGER.md  WORLD_RENDERER_V2_RUNTIME_FINDINGS.md  WORLD_SPACE_RENDERER_ACTIVE.md  WORLD_SPACE_RENDERER_ACTIVE_NOTE.txt  WORLD_SPACE_RENDERER_BRANCH_READY.txt  WORLD_SPACE_RENDERER_BRANCH_READY_2.txt  WORLD_SPACE_RENDERER_BRANCH_READY_3.txt  WORLD_SPACE_RENDERER_BRANCH_READY_5.txt  WORLD_SPACE_RENDERER_PLAN.md  WORLD_SPACE_RENDERER_PLAN_NOTE.txt
package/FFAtmo/: FFAtmo.ini.example  README.txt
package/FFAtmo/ui/assets/: README.txt
package/FFAtmo/ui/assets/login/icons/: github_mark.png.b64
profiles/: Lineage1000.ini
release/: 0.4.8.md  v0.4.9.md
src/: AircraftProfile.cpp  AircraftProfile.h  AtmosphereModel.cpp  AtmosphereModel.h  CompanionBridge.cpp  CompanionBridge.h  ContrailDebugOverlay.cpp  ContrailDebugOverlay.h  ContrailDebugPlugin.cpp  ContrailWorldRenderer.cpp  ContrailWorldRenderer.h  GeometryDebugOverlay.cpp  GeometryDebugOverlay.h  GeometryDebugPlugin.cpp  Panel.cpp  Panel.h  ParticleInstance.cpp  ParticleInstance.h  ParticleInstanceCompat.cpp  Plugin.cpp  PublishedDatarefs.cpp  PublishedDatarefs.h  RecorderDebugPlugin.cpp  Settings.cpp  Settings.h  SimDatarefs.cpp  SimDatarefs.h
src/acf/: AcfGeometry.cpp  AcfGeometry.h  OverlayV2BuildMarker.cpp
src/diagnostics/: LiveSnapshotNormalizer.cpp  LiveSnapshotNormalizer.h  ReplayFile.cpp  ReplayFile.h  ReplayRunner.cpp  ReplayRunner.h
src/engine/: ContrailSimulation.cpp  ContrailSimulation.h  LiveContrailEngine.cpp  LiveContrailEngine.h  SimulatorSnapshot.h  WakeFluidSolver.cpp  WakeFluidSolver.h
src/host/: XPlaneSnapshotSource.cpp  XPlaneSnapshotSource.h
src/render/: BillboardMath.h  ContrailRenderPlanner.cpp  ContrailRenderPlanner.h
src/tools/: .keep  ReplayRunnerMain.cpp
tests/: AcfParserTests.cpp  ContrailRenderPlannerTests.cpp  ContrailSimulationTests.cpp  CoreTests.cpp  LiveContrailDebugTests.cpp  ReplayRunnerTests.cpp  ReplayTests.cpp
tools/: ApplyContrailRealism.ps1  ApplyEffectIsolationV1.ps1  ApplyLoginHotfix.ps1  ApplyLoginV2.ps1  ApplyXPlaneAssetSyncV1.ps1  generate_contrail_assets.py  validate_assets.py
update/: latest.json  test.json
